# top500-dataloader

./: README.md  pyproject.toml
examples/: README.md  accelerators.py  example_accelerators.py  example_rmax.py  example_simple.py  pyproject.toml
src/top500/: __init__.py  __main__.py
