[project]
name = "top500"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ruben Felgenhauer", email = "ruben.felgenhauer@posteo.de" }
]
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.5.0",
    "polars>=1.34.0",
    "pydantic>=2.12.0",
]

[project.scripts]
top500 = "top500:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
